--- a/reportMaster2/5-Concl.tex
+++ b/reportMaster2/5-Concl.tex
@@ -3,11 +3,11 @@
 \chapter{Conclusion}
 %\addcontentsline{toc}{chapter}{Conclusion}
 
-Au cours du stage a été développée un DSEL permettant de décrire facilement les calculs à base de stencils et d'obtenir des temps d'exécution en corrélation avec les capacités actuelles des machines. Il s'agit là de deux problématiques primordiales du domaine du calcul haut performance : comment faciliter la programmation de codes efficaces par un utilisateur quelconque, et comment les rendre rapides à l'exécution. Ce DSEL utilise les moyens les plus modernes disponibles tels que le \textsf{C++14} ou \textsf{SYCL} et répond au manque d'outils adaptés pour les stencils. L'évaluation du DSEL a permis d'établir que des améliorations restent à prévoir, elles seront toutefois facilités par les techniques qu'il utilise déjà. 
+Au cours du stage a été développée un DSEL permettant de décrire facilement les calculs à base de stencils et d'obtenir des temps d'exécution en corrélation avec les capacités actuelles des machines. Il s'agit là de deux problématiques primordiales du domaine du calcul haute performance : comment faciliter la programmation de codes efficaces par un utilisateur quelconque, et comment les rendre rapides à l'exécution. Ce DSEL utilise les moyens les plus modernes disponibles tels que le \textsf{C++14} ou \textsf{SYCL} et répond au manque d'outils adaptés pour les stencils. L'évaluation du DSEL a permis d'établir que des améliorations restent à prévoir, elles seront toutefois facilitées par les techniques qu'il utilise déjà. 
 
 \section{Bilan}
 
-Les quelques langages (tels que \textsf{Blitz++} ou \textsf{Pochoir}) existants pour les calculs de stencils ont de nombreux désavantages à la fois dans leur syntaxe et aussi dans leur performances car peu sont adaptés aux machines parallèles hétérogènes actuelles. Après une analyse des éléments nécessaires à la description d'un stencil, des objectifs ont été énoncés concernant un futur outil dédié aux stencils. Ils concernent tout autant l'expressivité de l'outil --- le respect de la sémantique des stencils ---, que les performances qu'il doit apporter --- notamment par la technique de tuilage. Ces objectifs ont pour la plupart été repris lors de l'implantation du DSEL basé sur \textsf{triSYCL} qui est opérationnel et a été testé sur un exemple de problème courant : Jacobi en deux dimensions. 
+Les quelques langages (tels que \textsf{Blitz++} ou \textsf{Pochoir}) existants pour les calculs de stencils ont de nombreux désavantages à la fois dans leur syntaxe et aussi dans leurs performances car peu sont adaptés aux machines parallèles hétérogènes actuelles. Après une analyse des éléments nécessaires à la description d'un stencil, des objectifs ont été énoncés concernant un futur outil dédié aux stencils. Ils concernent tout autant l'expressivité de l'outil --- le respect de la sémantique des stencils ---, que les performances qu'il doit apporter --- notamment par la technique de tuilage. Ces objectifs ont pour la plupart été repris lors de l'implantation du DSEL basé sur \textsf{triSYCL} qui est opérationnel et a été testé sur un exemple de problème courant : Jacobi en deux dimensions. 
 
 D'autres choix auraient été possibles concernant la conception ainsi que l'implantation de l'outil. Concernant la conception il n'était pas obligatoire par exemple de se focaliser sur un DSEL : une extension de compilateur permettant de détecter automatiquement les stencils dans le code serait certainement très bénéfique pour l'utilisateur bien que difficile à réaliser. Quant à l'implantation, le DSEL aurait pu utiliser un autre langage tel que \textsf{Python}, très apprécié grâce à sa syntaxe pour les tableaux. D'autres bibliothèques de parallélisation adaptées aux machines hétérogènes auraient aussi pu être utilisées par le DSEL au lieu de \textsf{triSYCL} : \textsf{SkePU} qui s'appuie sur \textsf{StarPU}, ou directement \textsf{StarPU}.
 
@@ -15,9 +15,9 @@ Les tests effectués ont toutefois démontré que notre approche était viable t
 
 \section{Perspectives}
 
-À court terme les évolutions pour le DSEL concernent le nombre de dimensions autorisées pour les stencils (uniquement deux actuellement), quelques éléments de syntaxe (pour la gestion de types complexes d'éléments telles que des matrices) et le choix automatique de l'implantation optimale (technique de tuilage ou non).
+À court terme les évolutions pour le DSEL concernent le nombre de dimensions autorisées pour les stencils (uniquement deux actuellement), quelques éléments de syntaxe (pour la gestion de types complexes d'éléments tels que des matrices) et le choix automatique de l'implantation optimale (technique de tuilage ou non).
 
-Par ailleurs la représentation en mémoire des données utilisées par les stencils mérite une attention poussée qui pourrait conduire à de nouvelles implantations, de même que la gestion des aspects distribués (si plusieurs machines distinctes connectées entre elles). Les caractéristiques des  processeurs (CPU, GPU ou \emph{many integrated core}) doivent aussi permettre d'adapter le code produit par le DSEL, et il est par exemple nécessaire d'améliorer et uniformiser la façon dont ces caractéristiques sont récupérées.
+Par ailleurs la représentation en mémoire des données utilisées par les stencils mérite une attention poussée qui pourrait conduire à de nouvelles implantations, de même que la gestion des aspects distribués (si plusieurs machines distinctes sont connectées entre elles). Les caractéristiques des  processeurs (CPU, GPU ou \emph{many integrated core}) doivent aussi permettre d'adapter le code produit par le DSEL, et il est par exemple nécessaire d'améliorer et uniformiser la façon dont ces paramètres sont récupérées.
 
 Enfin à long terme le DSEL pourrait s'étendre à d'autres types de calculs que les stencils, éventuellement en reprenant le formalisme des squelettes de calculs dont les \emph{map/reduce} qui sont très courants dans les problèmes actuels.
 
