--- a/reportMaster2/3-Biblio.tex
+++ b/reportMaster2/3-Biblio.tex
@@ -176,7 +176,7 @@ En supposant que certaines formes sont plus performantes que d'autres, il est pr
 \subsection{Calcul statique des paramètres de tuilage}
 \label{sec:param_tuile}
 
-Plusieurs paramètres configurent le tuilage, notamment la taille de la zone fantôme ainsi que la taille maximum d'un warp. Ces paramètres sont calculés lors de la compilation, toujours grâce à la méta-programmation. Pour la taille de la zone fantôme, le calcul est très simple, il est fait lors de l'agrégation des coefficients (ou stencils) entre eux. En effet les objets coefficients et stencils contiennent tous les deux des indices locaux étant le maximum de décalage dans chacune des directions (quatre en deux dimensions). Le maximum est mis-à-jour à chaque agrégation, en fonction des maximums des fils dans l'arbre binaire du stencil. C'est grâce à ce maximum (un dans chaque direction) qu'est déterminée la zone fantôme qui est définie par l'\emph{offset} à partir duquel la zone de calculs commence, ainsi que la largeur totale de la zone fantôme dans chaque dimension. En deux dimensions, le stencil à quatre points est donc large de $2$ éléments dans chacune des deux dimensions, tandis que l'offset est de $1$ dans chacune des deux dimensions également.
+Plusieurs paramètres configurent le tuilage, notamment la taille de la zone fantôme ainsi que la taille maximum d'un warp. Ces paramètres sont calculés lors de la compilation, toujours grâce à la méta-programmation. Pour la taille de la zone fantôme, le calcul est très simple, il est fait lors de l'agrégation des coefficients (ou stencils) entre eux. En effet les objets coefficients et stencils contiennent tous les deux des indices locaux étant le maximum de décalage dans chacune des directions (quatre en deux dimensions). Le maximum est mis à jour à chaque agrégation, en fonction des maximums des fils dans l'arbre binaire du stencil. C'est grâce à ce maximum (un dans chaque direction) qu'est déterminée la zone fantôme qui est définie par l'\emph{offset} à partir duquel la zone de calculs commence, ainsi que la largeur totale de la zone fantôme dans chaque dimension. En deux dimensions, le stencil à quatre points est donc large de deux éléments dans chacune des deux dimensions, tandis que l'offset est de un dans chacune des deux dimensions également.
 
 L'ensemble de ce calcul est fait de manière statique, car ces paramètres sont liés au template des classes impliquées qui elles-même sont statiques --- dans le cas des coefficients variables. Ce fonctionnement a été validé par la désassemblage d'un fichier binaire censé affiché le résultat de ce calcul, on peut y vérifier que le résultat y apparaît directement dans le code, sans aucun calcul le précédent. Ce résultat peut sembler paradoxal : c'est avec les coefficients variables que nous obtenons des paramètres statiques. Cela n'est pas contradictoire car ce qu'il se produit dans les cas des coefficients variables est une séparation totale entre l'objet définissant uniquement les indices de décalage, et l'objet permettant d'accéder aux coefficients. Par simplicité pour l'utilisateur, ces deux objets sont réunis en un seul dans le cas d'un coefficient fixe, empêchant potentiellement l'optimisation statique (selon les capacités du compilateur, non-évaluées sur cet aspect). Il s'agit là d'un parfait exemple de l'équilibre à trouver entre les trois piliers de Todd Veldhuizen pour une librairie optimisée : élégance, sûreté et rapidité.
 
@@ -220,13 +220,13 @@ auto op_work = work_out3 << st3 << work_out2 << st2 << work_out1 << st1 << work_
 \end{minted}
 \end{listing}
 
-Une telle sémantique nécessite la vérification poussée des tableaux en jeux, afin de détecter lors de la compilation que l'utilisateur n'a pas utilisé plusieurs fois le même tableau de sortie, ou a utilisé un même tableau en sortie et en entrée. Comme le nombre de stencils que l'utilisateur peut vouloir agréger est inconnu à l'avance, il n'est pas possible d'utiliser la technique de spécialisation partielle directement (car il faudrait alors écrire dans le code du DSEL tous les cas d'erreurs imaginables, ce qui est du coup impossible). Il convient alors d'utiliser les \emph{variadic templates} introduit au \textsf{C++11} \cite{Art6}, qui permettent de créer des listes statiques lors de la compilation, et par exemple d'en compter les éléments, mais aussi de pouvoir les différencier. En pratique cette technique est difficile à mettre en œuvre et nécessite beaucoup de calculs tandis que la limite de pile de récursion des templates lors de la compilation se situe autour de $900$ appels. Toutefois il est peu probable que l'utilisateur utilise ne serait-ce que $10$ sorties différentes, ce qui même avec un algorithme naïf quadratique (comparaison de la liste avec elle-même) ne provoquerait que $100$ appels récursifs.
+Une telle sémantique nécessite la vérification poussée des tableaux en jeux, afin de détecter lors de la compilation que l'utilisateur n'a pas utilisé plusieurs fois le même tableau de sortie, ou a utilisé un même tableau en sortie et en entrée. Comme le nombre de stencils que l'utilisateur peut vouloir agréger est inconnu à l'avance, il n'est pas possible d'utiliser la technique de spécialisation partielle directement (car il faudrait alors écrire dans le code du DSEL tous les cas d'erreurs imaginables, ce qui est impossible). Il convient alors d'utiliser les \emph{variadic templates} introduit au \textsf{C++11} \cite{Art6}, qui permettent de créer des listes statiques lors de la compilation, et par exemple d'en compter les éléments, mais aussi de pouvoir les différencier. En pratique cette technique est difficile à mettre en œuvre et nécessite beaucoup de calculs tandis que la limite de pile de récursion des templates lors de la compilation se situe autour de $900$ appels. Toutefois il est peu probable que l'utilisateur utilise ne serait-ce que $10$ sorties différentes, ce qui même avec un algorithme naïf quadratique (comparaison de la liste avec elle-même) ne provoquerait que $100$ appels récursifs.
 
 
 \subsection{Améliorations du back-end}
 \label{sec:amelior_backend}
 
-Dans le cas du calcul classique de Jacobi en deux dimensions (qui peut servir notamment à flouter des images), le même stencil est appliqué un certain nombre de fois d'affilée. Or cela nécessite beaucoup de communications, qu'il est possible de diminuer en effectuant en contrepartie quelques calculs supplémentaires redondants (et en utilisant un peu plus de mémoire). Selon les coûts de communications, les coûts de calculs et la mémoire disponible, cette technique peut fournir un gain substantiel de performances, il s'agit de l'\emph{overlapped tiling} ou tuilage chevauchant. Cette technique est assez développée, et est même encore adaptée à la hiérarchie actuelle des ordinateurs \cite{Art17}. Plus concrètement, ce principe est simplement une extension du tuilage tel que représenté dans la figure \ref{fig:stencil_mtile} au chapitre précédent. Les macro-tuiles se chevauchent puisqu'elles nécessitent une zone fantôme qui se trouve chez leurs voisines. Cette zone est prévue pour une seule application dans le cas de la figure \ref{fig:stencil_mtile}, mais il peut très bien il y en avoir plusieurs, concentriques, dont les éléments calculés sur les bords seront redondants. La figure \ref{fig:stencil_mtile2} représente les calculs effectifs pour deux mises-à-jour consécutive (en place, sans communications ni synchronisation) d'une macro-tuile. La macro-tuile centrale contient les résultats tandis que le premier contour contient les résultats (en vert) de la première application du stencil, utilisés comme fantômes lors de l'application du second stencil. Le contour en pointillés le plus éloigné contient les éléments fantômes (en rouge) de l'application du premier stencil. Les données utilisées par la macro-tuile débordent alors largement sur les macro-tuiles voisines dans le cas d'une si petite taille de macro-tuile. Il convient en pratique d'utiliser le tuilage chevauchant pour l'application de quelques stencils seulement (moins d'une dizaine) pour des tuiles de l'ordre de la centaine d'éléments dans chaque dimension.
+Dans le cas du calcul classique de Jacobi en deux dimensions (qui peut servir notamment à flouter des images), le même stencil est appliqué un certain nombre de fois d'affilée. Or cela nécessite beaucoup de communications, qu'il est possible de diminuer en effectuant en contrepartie quelques calculs supplémentaires redondants (et en utilisant un peu plus de mémoire). Selon les coûts de communications, les coûts de calculs et la mémoire disponible, cette technique peut fournir un gain substantiel de performances, il s'agit de l'\emph{overlapped tiling} ou tuilage chevauchant. Cette technique est assez développée, et est même encore adaptée à la hiérarchie actuelle des ordinateurs \cite{Art17}. Plus concrètement, ce principe est simplement une extension du tuilage tel que représenté dans la figure \ref{fig:stencil_mtile} au chapitre précédent. Les macro-tuiles se chevauchent puisqu'elles nécessitent une zone fantôme qui se trouve chez leurs voisines. Cette zone est prévue pour une seule application dans le cas de la figure \ref{fig:stencil_mtile}, mais il peut très bien y en avoir plusieurs, concentriques, dont les éléments calculés sur les bords seront redondants. La figure \ref{fig:stencil_mtile2} représente les calculs effectifs pour deux mises à jour consécutives (en place, sans communication ni synchronisation) d'une macro-tuile. La macro-tuile centrale contient les résultats tandis que le premier contour contient les résultats (en vert) de la première application du stencil, utilisés comme fantômes lors de l'application du second stencil. Le contour en pointillé le plus éloigné contient les éléments fantômes (en rouge) de l'application du premier stencil. Les données utilisées par la macro-tuile débordent alors largement sur les macro-tuiles voisines dans le cas d'une si petite taille de macro-tuile. Il convient en pratique d'utiliser le tuilage chevauchant pour l'application de quelques stencils seulement (moins d'une dizaine) pour des tuiles de l'ordre de la centaine d'éléments dans chaque dimension.
 
 \begin{figure}[!h]
 \floatbox[{\capbeside\thisfloatsetup{capbesideposition={right,center},capbesidewidth=4cm}}]{figure}[\FBwidth]
@@ -236,7 +236,7 @@ Dans le cas du calcul classique de Jacobi en deux dimensions (qui peut servir no
 
 Pour appliquer cette technique, il faut toutefois savoir à l'avance combien de fois le stencil sera itéré, cela est possible avec la syntaxe proposée pour le chaînage de stencils, mais cela n'est pas possible pour le cas général où une nouvelle syntaxe est alors nécessaire (par exemple en intercalant le nombre d'itérations dans la syntaxe présentée dans le code \ref{lst:agreg1_stencil}). 
 
-Une nouvelles fois c'est la spécialisation partielle qui permettrait de mettre en œuvre le déclenchement automatique de l'utilisation de cette technique. C'est aussi par la spécialisation partielle que pourrait être choisie la forme la plus adaptée des blocs pour le tuilage. 
+Une nouvelle fois c'est la spécialisation partielle qui permettrait de mettre en œuvre le déclenchement automatique de l'utilisation de cette technique. C'est aussi par la spécialisation partielle que pourrait être choisie la forme la plus adaptée des blocs pour le tuilage. 
 
 
 Le DSEL est cependant déjà utilisable sans toutes ces améliorations (notamment pour un problème de Jacobi), il est donc possible d'en évaluer la qualité tant au niveau du front-end que du back-end. Le chapitre suivant présente les résultats de ces évaluations concernant sommairement la qualité du front-end, et de manière plus poussée la qualité du back-end : principalement la rapidité d'exécution des problèmes.
